@@ -1,5 +1,9 @@
 2005-03-25  Adam Weinberger  <adamw@gnome.org>
 
+	* translation-status.xml: Change gimp over to the HEAD branch.
+
+2005-03-25  Adam Weinberger  <adamw@gnome.org>
+
 	* translation-status.xml: Remove gnome-2.8 modules, and create
 	  gnome-2.12 modules. Additionally, the file has been passed
 	  through xmllint --format, so it should now be impeccably
